cluster/core/external-secrets/bitwarden/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw-cli
  namespace: bitwarden
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: bitwarden
            app.kubernetes.io/name: bitwarden
